Fix alignment of global search button

--- a/src/assets/styles/global/search.styl
+++ b/src/assets/styles/global/search.styl
@@ -34,7 +34,7 @@
   border 0
   border-radius $border-radius-large
   margin-left -8px
-  padding 9px 12px 10px
+  padding 10px 12px 9px
 
   &:hover
     gradient-vertical(lighten($brand-color, 9%), lighten($brand-color, 2%))
