--- a/src/style.css
+++ b/src/style.css
@@ -1421,7 +1421,7 @@ div.wpcf7 img.ajax-loader {
   border: 0;
   border-radius: 3px;
   margin-left: -8px;
-  padding: 9px 12px 10px;
+  padding: 10px 12px 9px;
 }
 
 .global-search-button:hover {
